--- a/frontend/public/espace_client.html
+++ b/frontend/public/espace_client.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color:#F7230C!important" href="#"><span><img src="../imgs/logo.png" width="25" alt="Relayers"></span> Relayers</a>
+        <a class="navbar-brand text-uppercase" href="#home"> <span class="label text-capitalize" id="text_title">RELAYERS</span></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
