--- a/frontend/public/calendar.html
+++ b/frontend/public/calendar.html
@@ -9,8 +9,8 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="../css/calendar.css" rel="stylesheet" type="text/css">
   <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="style_index.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/style_index.css">
   <style>
   body { font-family:'Open Sans'; background-color:#ECF0F1;}
   </style>
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand text-uppercase" href="#home"> <span> <img src="../imgs/logo.png" id="logo_title" alt="Relayers"> </span> <span class="label text-capitalize" id="text_title">RELAYERS</span></a>
+        <a class="navbar-brand text-uppercase" href="#home"><span class="label text-capitalize" id="text_title"><img src="../imgs/logo_blank.png" id="logo_title" alt="Relayers"> RELAYERS</span></a>
       </div>
 
 
@@ -112,7 +112,7 @@
   <div id="calendar"></div>
 </div>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="calendar.js"></script>
+<script src="../javascript/calendar.js"></script>
 <script>
 var unavailableDates = [
   {start: '2015-08-31', end: '2015-09-05'},
