new cookie handler in separated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -327,6 +327,8 @@
   <script src="../javascript/contact-form.js"></script>
   <!-- Register form javascript -->
   <script src="../javascript/register-form.js"></script>
+  <!-- Cookie handler javascript -->
+  <script src="../javascript/cookie.js"></script>
 
   <script>
   $('a[href^="#"]').click(function(){
