--- a/frontend/public/account.html
+++ b/frontend/public/account.html
@@ -1,4 +1,4 @@
-account<head>
+<head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
   <link rel="stylesheet" href="../css/navbar.css">
