--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/account.css">
+  <link rel="stylesheet" href="../css/profile.css">
 </head>
 <body>
 
