--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -55,7 +55,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#about" class="navbar-head">À propos</a></li>
           <li><a href="#contact" class="navbar-head">Contact</a></li>
-          <li><button type="button" id="profile_btn" class="btn navbar-btn btn-circle">Profil</button></li>
+          <li><form action="/profile"><button type="submit" class="btn navbar-btn btn-circle">Profil</button></form></li>
           <li class="dropdown"><button type="button" class="btn navbar-btn btn-circle dropdown-toggle" data-toggle="dropdown">Connexion</button>
             <!-------- Login dropdown -------->
             <ul id="login-dp" class="dropdown-menu">
