--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -329,7 +329,7 @@
   <!-- Register form javascript -->
   <script src="../javascript/register-form.js"></script>
 
-  <script src="../javascript/loggedin.js"></script>
+  <script src="../javascript/login-logout.js"></script>
 
   <script>
   $('a[href^="#"]').click(function(){
