profile and login are not displayed initially

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -58,7 +58,7 @@
 
           <li><a href="#contact" class="navbar-head">Contact</a></li>
 
-          <li class="dropdown" style="display: block" id="profile">
+          <li class="dropdown" style="display: none" id="profile">
             <button class="btn navbar-btn btn-circle dropbtn"> Mon compte</button>
             <div class="dropdown-content">
               <a href="/profile">Mon profil</a>
@@ -66,7 +66,7 @@
             </div>
           </li>
 
-          <li class="dropdown" style="display: block" id="login">
+          <li class="dropdown" style="display: none" id="login">
             <button type="button" class="btn navbar-btn btn-circle dropdown-toggle" data-toggle="dropdown">Connexion</button>
             <!-------- Login dropdown -------->
             <ul id="login-dp" class="dropdown-menu">
