--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand text-uppercase" href="#home"><span class="label text-capitalize" id="text_title"><img src="../imgs/logo_blank.png" id="logo_title" alt="Relayers"> RELAYERS</span></a>
+        <a class="navbar-brand text-uppercase" href="https://relayers.fr"><span class="label text-capitalize" id="text_title"><img src="../imgs/logo_blank.png" id="logo_title" alt="Relayers"> RELAYERS</span></a>
       </div>
 
 
