--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -60,7 +60,7 @@
 
           <li class="dropdown" style="display: none" id="profile">
             <button type="button" class="btn navbar-btn btn-circle dropdown-toggle" data-toggle="dropdown">Mon compte</button>
-            <ul id="profile-dp" class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-profile">
               <a href="/profile">  Mon profil</a>
               <form class="form" action="/logout" method="POST" accept-charset="UTF-8"><button type="submit">Déconnexion</button></form>
             </ul>
