--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -324,6 +324,7 @@
     <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
   </footer>
 
+
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
@@ -357,6 +358,14 @@
 
   <!-- Google analytics -->
   <script src="../javascript/analytics.js"></script>
+
+  <noscript>
+    <div class="nojs-overlay" style="width: 100%">
+      <div class="nojs-overlay-content">
+        Veuillez activer le javascript
+      </div>
+    </div>
+  </noscript>
 
 </body>
 
