contact form width reduced

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -295,7 +295,7 @@
         <span id="text-contact-alert"></span>
       </div>
       <div class="col-lg-8 col-lg-offset-2">
-        <hr>
+        <hr style="width: 600px;">
         <form class="form-horizontal" id="contact-form" action="#contact">
           <div class="form-group">
             <input type="text" class="form-control" id="sender_mail" name="sender_mail" placeholder="Adresse email" onblur="checkMail(this)" onfocus="highlight(this, false)">
@@ -304,7 +304,7 @@
             <textarea  class="form-control" id="msg" name="msg" placeholder="Votre message" style="resize:none;" rows="5"></textarea>
           </div>
           <button type="button" class="btn btn-default center-block" id="contact_btn">Envoyer</button>
-          <hr>
+          <hr style="width: 600px;">
         </form>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-center">
