cleaned javascript directory

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -339,8 +339,10 @@
   <script src="../javascript/contact-form.js"></script>
   <!-- Register form javascript -->
   <script src="../javascript/register-form.js"></script>
+  <!-- Login form javascript -->
+  <script src="../javascript/login-form.js"></script>
 
-  <script src="../javascript/login-logout.js"></script>
+  <script src="../javascript/logged.js"></script>
 
   <script>
   $('a[href^="#"]').click(function(){
