--- a/frontend/public/calendar.html
+++ b/frontend/public/calendar.html
@@ -21,11 +21,11 @@
         scheduler.init('scheduler_here',new Date(2017,4,10),"month");
 
         scheduler.templates.xml_date = function(value){ return new Date(value); };
-        scheduler.load("/data", "json");
+        scheduler.load("/cal", "json");
 
         scheduler.config.xml_date="%Y-%m-%d %H:%i";
 
-        var dp = new dataProcessor("/data");
+        var dp = new dataProcessor("/cal");
         dp.init(scheduler);
         dp.setTransactionMode("POST", false);
     }
