--- a/frontend/public/calendar.html
+++ b/frontend/public/calendar.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <script src="codebase/dhtmlxscheduler.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" href="codebase/dhtmlxscheduler.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../codebase/dhtmlxscheduler.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <style type="text/css" media="screen">
