--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,30 +7,24 @@
   <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Droid+Serif">
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/social_icons.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Droid+Serif">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="../javascript/google_localisation_inscription.js"></script>
+
   <style>
   /* Always set the map height explicitly to define the size of the div
   * element that contains the map. */
   #map {
     height: 100%;
   }
-  /* Optional: Makes the sample page fill the window. */
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
   /* z-index allows autocomplete to be above the dropdown-menu */
   .pac-container {
     z-index: 2000;
   }
   </style>
-  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 </head>
 
 
@@ -319,55 +313,53 @@
     </div>
 
 
-  <footer class="footer">
-    <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
-  </footer>
+    <footer class="footer">
+      <p class="text-muted text-center" style="padding:5px">@ Relayers 2017 - Tous droits réservés - Mentions légales - CGU</p>
+    </footer>
 
 
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-  <script src="../bootstrap/docs/dist/js/bootstrap.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="../bootstrap/docs/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
 
-  <!-- General forms javascript -->
-  <script src="../javascript/forms.js"></script>
-  <!-- Contact form javascript -->
-  <script src="../javascript/contact-form.js"></script>
-  <!-- Register form javascript -->
-  <script src="../javascript/register-form.js"></script>
-  <!-- Login form javascript -->
-  <script src="../javascript/login-form.js"></script>
+    <!-- General forms javascript -->
+    <script src="../javascript/forms.js"></script>
+    <!-- Contact form javascript -->
+    <script src="../javascript/contact-form.js"></script>
+    <!-- Register form javascript -->
+    <script src="../javascript/register-form.js"></script>
+    <!-- Login form javascript -->
+    <script src="../javascript/login-form.js"></script>
 
-  <script src="../javascript/logged.js"></script>
+    <script src="../javascript/logged.js"></script>
 
-  <script>
-  $('a[href^="#"]').click(function(){
-    var the_id = $(this).attr("href");
-    if (the_id != "#") {
-      $('html, body').animate({
-        scrollTop:$(the_id).offset().top
-      }, 'slow');
-    }
-    return false;
-  });
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWLLyzwuKDu1Ys2az4cjGlm31gUN-2rDY&libraries=places&callback=initAutocomplete" async defer></script>
+    <script>
+    $('a[href^="#"]').click(function(){
+      var the_id = $(this).attr("href");
+      if (the_id != "#") {
+        $('html, body').animate({
+          scrollTop:$(the_id).offset().top
+        }, 'slow');
+      }
+      return false;
+    });
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWLLyzwuKDu1Ys2az4cjGlm31gUN-2rDY&libraries=places&callback=initAutocomplete" async defer></script>
 
-  <!-- Google analytics -->
-  <script src="../javascript/analytics.js"></script>
+    <!-- Google analytics -->
+    <script src="../javascript/analytics.js"></script>
 
-  <noscript>
-    <div class="nojs-overlay" style="width: 100%">
-      <div class="nojs-overlay-content">
-        Veuillez activer le javascript
+    <noscript>
+      <div class="nojs-overlay" style="width: 100%">
+        <div class="nojs-overlay-content">
+          Veuillez activer le javascript
+        </div>
       </div>
-    </div>
-  </noscript>
+    </noscript>
 
-</body>
+  </body>
 
-</html>
+  </html>
