--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Profil</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="../imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Droid+Serif">
-  <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/profile.css">
-  <script src="../codebase/dhtmlxscheduler.js" type="text/javascript" charset="utf-8"></script>
-  <link rel="stylesheet" href="../codebase/dhtmlxscheduler.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
-  <style type="text/css" media="screen">
-  	html, body{
-  		margin:0px;
-  		padding:0px;
-  		height:100%;
-  		overflow:hidden;
-  	}
-  </style>
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../codebase/dhtmlxscheduler.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../codebase/dhtmlxscheduler.js"></script>
 
 </head>
+
 <body onload="init()">
 
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -55,43 +49,71 @@
   </nav>
 
   <script type="text/javascript" charset="utf-8">
-      function init() {
-          scheduler.init('scheduler_here',new Date(2017,4,10),"month");
+  function init() {
+    scheduler.init('scheduler_here',new Date(2017,4,10),"month");
 
-          scheduler.templates.xml_date = function(value){ return new Date(value); };
-          scheduler.load("/cal", "json");
+    scheduler.templates.xml_date = function(value){ return new Date(value); };
+    scheduler.load("/cal", "json");
 
-          scheduler.config.xml_date="%Y-%m-%d %H:%i";
+    scheduler.config.xml_date="%Y-%m-%d %H:%i";
 
-          var dp = new dataProcessor("/cal");
-          dp.init(scheduler);
-          dp.setTransactionMode("POST", false);
-      }
+    var dp = new dataProcessor("/cal");
+    dp.init(scheduler);
+    dp.setTransactionMode("POST", false);
+  }
 
   </script>
 
 
-    <div id="scheduler_here" class="dhx_cal_container well center-block" style='width:50%; height:50%; margin-top:100px;'>
-        <div class="dhx_cal_navline">
-            <div class="dhx_cal_prev_button">&nbsp;</div>
-            <div class="dhx_cal_next_button">&nbsp;</div>
-            <div class="dhx_cal_today_button"></div>
-            <div class="dhx_cal_date"></div>
-            <div class="dhx_cal_tab" name="day_tab" style="right:204px;"></div>
-            <div class="dhx_cal_tab" name="week_tab" style="right:140px;"></div>
-            <div class="dhx_cal_tab" name="month_tab" style="right:76px;"></div>
-        </div>
-        <div class="dhx_cal_header">
-        </div>
-        <div class="dhx_cal_data">
-        </div>
+  <div id="scheduler_here" class="dhx_cal_container well center-block" style='width:50%; height:50%; margin-top:100px;'>
+    <div class="dhx_cal_navline">
+      <div class="dhx_cal_prev_button">&nbsp;</div>
+      <div class="dhx_cal_next_button">&nbsp;</div>
+      <div class="dhx_cal_today_button"></div>
+      <div class="dhx_cal_date"></div>
+      <div class="dhx_cal_tab" name="day_tab" style="right:204px;"></div>
+      <div class="dhx_cal_tab" name="week_tab" style="right:140px;"></div>
+      <div class="dhx_cal_tab" name="month_tab" style="right:76px;"></div>
     </div>
+    <div class="dhx_cal_header">
+    </div>
+    <div class="dhx_cal_data">
+    </div>
+  </div>
 
+  <footer class="footer">
+    <p class="text-muted text-center" style="padding:5px">@ Relayers 2017 - Tous droits réservés - Mentions légales - CGU</p>
+  </footer>
 
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="../bootstrap/docs/dist/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../bootstrap/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+
+  <script>
+  $('a[href^="#"]').click(function(){
+    var the_id = $(this).attr("href");
+    if (the_id != "#") {
+      $('html, body').animate({
+        scrollTop:$(the_id).offset().top
+      }, 'slow');
+    }
+    return false;
+  });
+  </script>
 
   <!-- Google analytics -->
   <script src="../javascript/analytics.js"></script>
 
+  <noscript>
+    <div class="nojs-overlay" style="width: 100%">
+      <div class="nojs-overlay-content">
+        Veuillez activer le javascript
+      </div>
+    </div>
+  </noscript>
 
 </body>
 </html>
